# pulkit-calculator

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTE.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
scripts/: load_env.sh  publish.sh
src/pulkit_calculator/: __init__.py  core.py
tests/: test_core.py
